src/test/resources/refCompilerOutput/invalid/semanticErr/variables/undeclaredVarAccess.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:10 -- Variable y is not defined in this scope
